--- a/src/app/ui/components/RestaurantInfo/style.css
+++ b/src/app/ui/components/RestaurantInfo/style.css
@@ -1,4 +1,39 @@
 .restaurant-info-container {
     height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+}
+.restaurant-info-container .restaurant-name {
+    margin-bottom: 5px;
+    display: flex; 
+    justify-content: space-evenly;
+    align-items: center; 
     width: 100%
 }
+
+.restaurant-info-container.winner {
+    background: #f5f5f5; 
+}
+
+.restaurant-info-container .restaurant-name .restaurant-link {
+    text-decoration: none;
+    color: #6e3792;
+    font-size: 18px;
+}
+
+.restaurant-info-container .restaurant-category {
+    margin: 0;
+    color: rgba(32, 24, 29, 0.781);
+    font-size: 14px;
+}
+
+.restaurant-info-container .restaurant-rating {
+    margin: 15px 0;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+
