--- a/src/app/ui/components/Table/elements/TableBody/style.css
+++ b/src/app/ui/components/Table/elements/TableBody/style.css
@@ -1,5 +1,25 @@
 .td-choice.active .ticked-box {
-    width: 100%;
-    height: 100%; 
-    background-color: green; 
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(
+    45deg,
+    #ffffff 42.86%,
+    #b086cc 42.86%,
+    #b086cc 50%,
+    #ffffff 50%,
+    #ffffff 92.86%,
+    #b086cc 92.86%,
+    #b086cc 100%
+  );
+  background-size: 9.9px 9.9px;
 }
+.td-voter {
+    
+}
+.td-voter .voters-name {
+    font-size: 18px; 
+}
+
