--- a/src/app/ui/components/Table/style.css
+++ b/src/app/ui/components/Table/style.css
@@ -1,35 +1,37 @@
 .venues-table {
-    margin: 70px 0;
-    width: 65%;
-    border-collapse: collapse;
-  }
+  margin: 70px 0;
+  width: 90%;
+  border-collapse: collapse;
+}
+
+.venues-table .table-row-heading .th-restaurant {
+  width: 23%;
+  height: 150px;
   
-  .venues-table .table-row-heading .th-restaurant {
-    width: 23%;
-    height: 150px;
-  }
-  
-  .venues-table .table-row-heading .th-participants {
-      width: 30%; 
-      height: 150px;
-  }
-  
-  .venues-table,
-  .th-restaurant,
-  .th-participants,
-  .td-voter,
-  .td-choice {
-    border: 1px solid #6e379244;
-  }
-  
-  
-  .venues-table .table-row-voter .td-voter {
-      width: 30%;
-      height: 50px; 
-  }
-  
-  .venues-table .table-row-voter .td-choice {
-      width: 23%;
-      height: 50px; 
-  }
-  
+}
+
+.venues-table .table-row-heading .th-participants {
+  width: 30%;
+  height: 150px;
+}
+
+.venues-table,
+.th-restaurant,
+.th-participants,
+.td-voter,
+.td-choice {
+  border: 1px dotted #666;
+  padding: 0.5em;
+  text-align: left;
+  color: #632a39;
+}
+
+.venues-table .table-row-voter .td-voter {
+  width: 30%;
+  height: 50px;
+}
+
+.venues-table .table-row-voter .td-choice {
+  width: 23%;
+  height: 50px;
+}
