--- a/src/app/ui/elements/Input/style.css
+++ b/src/app/ui/elements/Input/style.css
@@ -4,8 +4,13 @@
 
 .input-search {
     margin-right: 2em; 
-    width: 200px; 
+    padding-left: 10px;
+    width: 250px; 
     height: 35px; 
     font-size: 16px;
     color: #534BB2; 
+}
+
+.input-search::placeholder{
+    color: rgba(128, 128, 128, 0.38); 
 }
